[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cadence-flow"
version = "0.0.1.dev0"
authors = [
  { name="The Cadence Flow Authors", email="contact@cadence-flow.com" },
]
description = "Placeholder for the Cadence Flow project. An open-source Python library for human-in-the-loop AI workflows."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT License" }

# --- THIS IS THE NEW SECTION TO ADD ---
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-socketio",
    "pydantic"
]
# -----------------------------------------

classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/cadence-flow"
"Bug Tracker" = "https://github.com/cadence-flow/cadence-flow/issues"
Source = "https://github.com/cadence-flow"

[tool.setuptools.packages.find]
where = ["."]
include = ["cadence_flow*"]
exclude = ["frontend", "examples", "dist", "build"]